feat: demo testing in landing page
